--- a/src/scss/components/contacts.scss
+++ b/src/scss/components/contacts.scss
@@ -46,7 +46,7 @@
 
     @media (any-hover: hover) {
         & a:hover {
-            color: $yellowColor;
+            color: $accentColor;
             transition: color 0.2s;
         }
     }
