--- a/src/scss/config/reset.scss
+++ b/src/scss/config/reset.scss
@@ -44,7 +44,7 @@ body {
   font-family: $fontFamily;
   font-weight: $fontWeight;
   line-height: 1.2;
-  color: $fontColor;
+  color: $textColor;
 }
 
 input,
