--- a/src/scss/components/blocks/cart-button.scss
+++ b/src/scss/components/blocks/cart-button.scss
@@ -3,13 +3,13 @@
   position: relative;
 
   svg {
-    fill: $whiteColor;
+    fill: $primaryColor;
   }
 
   @media (min-width: $laptop) {
     display: flex;
     align-items: center;
-    background: $yellowColor;
+    background: $accentColor;
     border-radius: 5px;
     padding: 8px;
     height: max-content;
@@ -26,7 +26,7 @@
     @media (min-width: $laptop) {
       display: inline-block;
       font-size: 14px;
-      color: $whiteColor;
+      color: $primaryColor;
       margin-left: 7px;
     }
   }
@@ -40,8 +40,8 @@
     right: -5px;
     width: 15px;
     height: 15px;
-    background: $greenColor;
-    color: $whiteColor;
+    background: $thirdColor;
+    color: $primaryColor;
     border-radius: 50%;
     font-size: 11px;
   
@@ -51,7 +51,7 @@
       height: 22px;
       top: -10px;
       right: -10px;
-      background: $blueColor;
+      background: $secondaryColor;
     }
   }
 }
