--- a/src/scss/components/blocks/search.scss
+++ b/src/scss/components/blocks/search.scss
@@ -9,13 +9,13 @@
     font-size: 18px;
     padding: 5px;
     border-radius: 5px 0px 0px 5px;
-    border: 1px solid $whiteColor;
-    background: $whiteColor;
-    color: $blackColor;
+    border: 1px solid $primaryColor;
+    background: $primaryColor;
+    color: $textColor;
     outline: none;
   
     &::placeholder {
-      color: $greyColor;
+      color: $addtionalColor;
       font-size: 14px;
     }
   }
@@ -30,7 +30,7 @@
     span {
       display: none;
       font-size: 14px;
-      color: $whiteColor;
+      color: $primaryColor;
   
       @media (min-width: $tablet) {
         display: block;
@@ -38,7 +38,7 @@
     }
   
     &:active {
-      box-shadow: 0px 0px 8px 2px $yellowColor;
+      box-shadow: 0px 0px 8px 2px $accentColor;
       transition: $standardTrans;
     }
   
