--- a/src/scss/components/new.scss
+++ b/src/scss/components/new.scss
@@ -5,7 +5,7 @@
 .new__title {
     padding: 10px 0;
     margin-bottom: 15px;
-    border-bottom: 1px solid $blackColor;
+    border-bottom: 1px solid $textColor;
 
     @media (min-width: $laptop) {
         margin-bottom: 20px;
@@ -32,7 +32,7 @@
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    background: $blueColor;
+    background: $secondaryColor;
 
     &:not(:last-child) {
         margin-right: 5px;
@@ -40,7 +40,7 @@
 }
 
 .swiper-pagination-bullet-active {
-    background: $yellowColor;
+    background: $accentColor;
 }
 
 .swiper-button-prev,
@@ -56,7 +56,7 @@
     }
 
     svg {
-        fill: $yellowColor;
+        fill: $accentColor;
     }
 }
 
@@ -71,6 +71,6 @@
 
 .swiper-button-disabled {
     svg {
-        fill: $greyColor;
+        fill: $addtionalColor;
     }
 }
