--- a/src/scss/components/popup.scss
+++ b/src/scss/components/popup.scss
@@ -24,7 +24,7 @@
 }
 
 .popup__content {
-    background: $whiteColor;
+    background: $primaryColor;
     height: max-content;
     width: 100%;
     min-height: 100%;
@@ -44,7 +44,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 15px 0 10px 0;
-    border-bottom: 1px solid $blackColor;
+    border-bottom: 1px solid $textColor;
     margin-bottom: 10px;
 
     @media (min-width: $laptop) {
