--- a/src/scss/components/product-card.scss
+++ b/src/scss/components/product-card.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     padding: 10px;
-    border: 1px solid $greyColor;
+    border: 1px solid $addtionalColor;
     border-radius: 10px;
 
     @media (min-width: $laptop) {
@@ -45,7 +45,7 @@
     transition: 0.2s;
 
     &:hover {
-        color: $yellowColor;
+        color: $accentColor;
         transition: 0.2s;
     }
 }
@@ -60,8 +60,8 @@
 
 .product-card-price__old {
     font-size: 14px;
-    color: $redColor;
-    text-decoration: line-through solid $redColor;
+    color: $errorColor;
+    text-decoration: line-through solid $errorColor;
     margin-bottom: 0;
 
     @media (min-width: $laptop) {
