--- a/src/scss/components/product.scss
+++ b/src/scss/components/product.scss
@@ -27,7 +27,7 @@
         margin: 0;
         max-width: 500px;
         padding: 15px;
-        border: 1px solid $greyColor;
+        border: 1px solid $addtionalColor;
         border-radius: 10px;
     }
 
@@ -71,7 +71,7 @@
 .product__text {
     @media (min-width: $laptop) {
         padding: 15px;
-        border: 1px solid $greyColor;
+        border: 1px solid $addtionalColor;
         border-radius: 10px;
     }
 }
@@ -84,9 +84,9 @@
     display: inline-block;
     padding: 3px 15px;
     margin: 0px 8px 15px 0px;
-    color: $whiteColor;
+    color: $primaryColor;
     border-radius: 5px;
-    background-color: $greenColor;
+    background-color: $thirdColor;
 }
 
 .product__link {
@@ -104,8 +104,8 @@
 
 .product-price__old {
     font-size: 14px;
-    color: $redColor;
-    text-decoration: line-through solid $redColor;
+    color: $errorColor;
+    text-decoration: line-through solid $errorColor;
     margin-bottom: 0;
 
     @media (min-width: $mobileB) {
@@ -153,7 +153,7 @@
         order: 3;
         padding: 15px;
         margin-bottom: 0;
-        border: 1px solid $greyColor;
+        border: 1px solid $addtionalColor;
         border-radius: 10px;
     }
 }
@@ -183,7 +183,7 @@
         position: absolute;
         bottom: -2px;
         left: 0;
-        background: $yellowColor;
+        background: $accentColor;
         width: 100%;
         height: 1.5px;
     }
@@ -201,7 +201,7 @@
             position: absolute;
             bottom: -2px;
             left: 0;
-            background: $yellowColor;
+            background: $accentColor;
             width: 100%;
             height: 2px;
         }
@@ -219,7 +219,7 @@
         order: 4;
         grid-column: span 2;
         padding: 15px;
-        border: 1px solid $greyColor;
+        border: 1px solid $addtionalColor;
         border-radius: 10px;
     }
 }
