--- a/src/scss/components/categories.scss
+++ b/src/scss/components/categories.scss
@@ -16,7 +16,7 @@
 }
 
 .categories-item {
-    border: 1px solid $addtionalColor;
+    border: 1px solid $additionalColor;
     border-radius: 10px;
     transition: $standardTrans;
 
