--- a/src/scss/components/product-card.scss
+++ b/src/scss/components/product-card.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     padding: 10px;
-    border: 1px solid $addtionalColor;
+    border: 1px solid $additionalColor;
     border-radius: 10px;
 
     @media (min-width: $laptop) {
