--- a/src/scss/components/blocks/search.scss
+++ b/src/scss/components/blocks/search.scss
@@ -15,7 +15,7 @@
     outline: none;
   
     &::placeholder {
-      color: $addtionalColor;
+      color: $additionalColor;
       font-size: 14px;
     }
   }
