--- a/src/scss/components/product.scss
+++ b/src/scss/components/product.scss
@@ -27,7 +27,7 @@
         margin: 0;
         max-width: 500px;
         padding: 15px;
-        border: 1px solid $addtionalColor;
+        border: 1px solid $additionalColor;
         border-radius: 10px;
     }
 
@@ -71,7 +71,7 @@
 .product__text {
     @media (min-width: $laptop) {
         padding: 15px;
-        border: 1px solid $addtionalColor;
+        border: 1px solid $additionalColor;
         border-radius: 10px;
     }
 }
@@ -153,7 +153,7 @@
         order: 3;
         padding: 15px;
         margin-bottom: 0;
-        border: 1px solid $addtionalColor;
+        border: 1px solid $additionalColor;
         border-radius: 10px;
     }
 }
@@ -219,7 +219,7 @@
         order: 4;
         grid-column: span 2;
         padding: 15px;
-        border: 1px solid $addtionalColor;
+        border: 1px solid $additionalColor;
         border-radius: 10px;
     }
 }
