--- a/src/scss/components/reviews.scss
+++ b/src/scss/components/reviews.scss
@@ -49,7 +49,7 @@
     flex: 0 0 20%;
     height: 100%;
     cursor: pointer;
-    color: $addtionalColor;
+    color: $additionalColor;
 }
 
 .rating__label::before {
@@ -114,7 +114,7 @@
 
 .reviews-item__date {
     font-size: 14px;
-    color: $addtionalColor;
+    color: $additionalColor;
     align-self: self-end;
     flex: auto;
     margin-right: 20px;
@@ -136,7 +136,7 @@
 .user-rating__item {
     font-size: 18px;
     letter-spacing: -4px;
-    color: $addtionalColor;
+    color: $additionalColor;
 
     &._active {
         color: $accentColor;
