moved footer to sections directory

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -50,4 +50,4 @@
 @import 'components/product';
 @import 'components/gallery-popup';
 @import 'components/reviews';
-@import 'components/footer';
+@import 'components/sections/footer';
