--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,6 +35,7 @@
 @import 'components/blocks/socials';
 @import 'components/blocks/cart-button';
 @import 'components/blocks/list';
+@import 'components/blocks/slider';
 
 @import 'components/sections/header';
 @import 'components/popup';
