--- a/src/scss/components/new.scss
+++ b/src/scss/components/new.scss
@@ -1,76 +1,13 @@
-.new__container {
+.new {
     position: relative;
-}
 
-.new__title {
-    padding: 10px 0;
-    margin-bottom: 15px;
-    border-bottom: 1px solid $textColor;
-
-    @media (min-width: $laptop) {
-        margin-bottom: 20px;
-    }
-}
-
-.new-slider {
-    @media (min-width: $laptop) {
-        max-width: 90%;
-    }
-}
-
-.new-slider__wrapper {
-    margin-bottom: 10px;
-}
-
-.swiper-pagination {
-    display: flex;
-    justify-content: center;
-}
-
-.swiper-pagination-bullet {
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background: $secondaryColor;
-
-    &:not(:last-child) {
-        margin-right: 5px;
-    }
-}
-
-.swiper-pagination-bullet-active {
-    background: $accentColor;
-}
-
-.swiper-button-prev,
-.swiper-button-next {
-    display: none;
-    position: absolute;
-    top: 50%;
-    background: transparent;
-    z-index: 1;
-
-    @media (min-width: $laptop) {
-        display: block;
-    }
-
-    svg {
-        fill: $accentColor;
-    }
-}
-
-.swiper-button-prev {
-    left: 0;
-}
-
-.swiper-button-next {
-    right: 0;
-    transform: rotate(180deg);
-}
-
-.swiper-button-disabled {
-    svg {
-        fill: $additionalColor;
+    &__title {
+        padding: 10px 0;
+        margin-bottom: 15px;
+        border-bottom: 1px solid $textColor;
+    
+        @media (min-width: $laptop) {
+            margin-bottom: 20px;
+        }
     }
 }
