--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -36,13 +36,13 @@
 @import 'components/blocks/cart-button';
 @import 'components/blocks/list';
 @import 'components/blocks/slider';
+@import 'components/blocks/product-card';
 
 @import 'components/sections/header';
 @import 'components/popup';
 @import 'components/cart-popup';
-@import 'components/categories';
-@import 'components/new';
-@import 'components/product-card';
+@import 'components/section/categories';
+@import 'components/section/new';
 @import 'components/callback';
 @import 'components/catalog';
 @import 'components/filter';
