--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,12 +37,13 @@
 @import 'components/blocks/list';
 @import 'components/blocks/slider';
 @import 'components/blocks/product-card';
+@import 'components/blocks/action-buttons';
 
 @import 'components/sections/header';
 @import 'components/popup';
 @import 'components/cart-popup';
-@import 'components/section/categories';
-@import 'components/section/new';
+@import 'components/sections/categories';
+@import 'components/sections/new';
 @import 'components/callback';
 @import 'components/catalog';
 @import 'components/filter';
