--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -38,10 +38,11 @@
 @import 'components/blocks/slider';
 @import 'components/blocks/product-card';
 @import 'components/blocks/action-buttons';
+@import 'components/blocks/form';
 
 @import 'components/sections/header';
 @import 'components/popup';
-@import 'components/cart-popup';
+@import 'components/sections/cart-popup';
 @import 'components/sections/categories';
 @import 'components/sections/new';
 @import 'components/callback';
