refactored callback form according to bem

--- a/src/scss/components/blocks/form.scss
+++ b/src/scss/components/blocks/form.scss
@@ -39,7 +39,7 @@
   max-height: 135px;
 }
 
-.form__footer {
+.form__actions {
   @media (min-width: $tablet) {
       display: flex;
       justify-content: space-between;
