--- a/src/scss/config/common.scss
+++ b/src/scss/config/common.scss
@@ -78,7 +78,7 @@ textarea {
 //========================================================================================================================================================
 
 //titles
-.title-first,
+.title,
 h1 {
     font-size: 30px;
     font-weight: 700;
