--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -39,6 +39,8 @@
 @import 'components/blocks/product-card';
 @import 'components/blocks/action-buttons';
 @import 'components/blocks/form';
+@import 'components/blocks/breadcrumbs';
+@import 'components/blocks/pagination';
 
 @import 'components/sections/header';
 @import 'components/popup';
@@ -48,7 +50,6 @@
 @import 'components/callback';
 @import 'components/catalog';
 @import 'components/filter';
-@import 'components/pagging';
 // @import 'components/contacts';
 @import 'components/product';
 @import 'components/gallery-popup';
