refactored product page according to bem

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -43,6 +43,7 @@
 @import 'components/blocks/pagination';
 @import 'components/blocks/filter';
 @import 'components/blocks/select';
+@import 'components/blocks/gallery';
 
 @import 'components/sections/header';
 @import 'components/popup';
@@ -52,7 +53,7 @@
 @import 'components/callback';
 @import 'components/sections/catalog';
 // @import 'components/contacts';
-@import 'components/product';
+@import 'components/sections/product';
 @import 'components/gallery-popup';
 @import 'components/reviews';
 @import 'components/sections/footer';
