--- a/src/scss/components/sections/product.scss
+++ b/src/scss/components/sections/product.scss
@@ -9,66 +9,16 @@
     }
 }
 
-.gallery {
+.product__gallery {
     grid-row: span 3;
-    max-width: 340px;
     margin-bottom: 15px;
     margin: 0 auto;
-
-    @media (min-width: $mobileB) {
-        max-width: 400px;
-    }
-
-    @media (min-width: $tablet) {
-        max-width: 450px;
-    }
-
     @media (min-width: $laptop) {
         margin: 0;
-        max-width: 500px;
-        padding: 15px;
-        border: 1px solid $additionalColor;
-        border-radius: 10px;
-    }
-
-    @media (min-width: 1200px) {
-        max-width: 600px;
     }
 }
 
-.gallery__slider {
-    margin-bottom: 10px;
-}
-
-.gallery__wrapper {}
-
-.gallery__slide,
-.thumbs__slide {
-    &:hover {
-        cursor: pointer;
-    }
-}
-
-.thumbs__slider {
-    max-width: 90%;
-}
-
-.thumbs-slider__wrapper {
-    position: relative;
-
-    .swiper-button-prev,
-    .swiper-button-next {
-        display: block;
-        transform: translate(-30%, -50%);
-    }
-
-    .swiper-button-next {
-        right: -6px;
-        transform: translate(0, -50%) rotate(180deg);
-    }
-}
-
-.product__text {
+.product-text {
     @media (min-width: $laptop) {
         padding: 15px;
         border: 1px solid $additionalColor;
@@ -76,11 +26,11 @@
     }
 }
 
-.product__title {
+.product-text__title {
     margin-bottom: 10px;
 }
 
-.product__status {
+.product-text__status {
     display: inline-block;
     padding: 3px 15px;
     margin: 0px 8px 15px 0px;
@@ -89,20 +39,20 @@
     background-color: $thirdColor;
 }
 
-.product__link {
+.product-text__link {
     &:hover {
         text-decoration: underline;
     }
 }
 
-.product__row {
+.product-text__row {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 15px;
 }
 
-.product-price__old {
+.product-text__price-old {
     font-size: 14px;
     color: $errorColor;
     text-decoration: line-through solid $errorColor;
@@ -118,7 +68,7 @@
     }
 }
 
-.product-price__actual {
+.product-text__price-actual {
     margin-bottom: 0;
     font-size: 20px;
     font-weight: 500;
@@ -132,7 +82,7 @@
     }
 }
 
-.product__btn {
+.product-text__btn {
     font-size: 18px;
     font-weight: 500;
     padding: 5px 20px;
@@ -144,73 +94,32 @@
     }
 }
 
-.product-add-info {
+.product__add-info {
     margin-bottom: 15px;
     order: 4;
 
     @media (min-width: $laptop) {
         grid-row: span 2;
         order: 3;
-        padding: 15px;
         margin-bottom: 0;
+    }
+}
+
+.add-info {
+    @media (min-width: $laptop) {
+        padding: 15px;
         border: 1px solid $additionalColor;
         border-radius: 10px;
     }
 }
 
-.product-add-info__navigation {
+.add-info__navigation {
     margin-bottom: 10px;
 
     @media (min-width: $laptop) {
         margin-bottom: 15px;
     }
 }
-
-.product-add-info__title,
-.product-details__title {
-    position: relative;
-    font-size: 18px;
-    font-weight: 500;
-    background: transparent;
-
-    &:not(:last-child) {
-        margin-right: 10px;
-    }
-
-    &._tab-active::after {
-        content: '';
-        display: block;
-        position: absolute;
-        bottom: -2px;
-        left: 0;
-        background: $accentColor;
-        width: 100%;
-        height: 1.5px;
-    }
-
-    @media (min-width: $laptop) {
-        font-size: 22px;
-
-        &:not(:last-child) {
-            margin-right: 15px;
-        }
-
-        &._tab-active::after {
-            content: '';
-            display: block;
-            position: absolute;
-            bottom: -2px;
-            left: 0;
-            background: $accentColor;
-            width: 100%;
-            height: 2px;
-        }
-    }
-}
-
-.product-add-info__content {}
-
-.product-add-info__body {}
 
 .product-details {
     margin-bottom: 15px;
@@ -231,7 +140,3 @@
         margin-bottom: 15px;
     }
 }
-
-.product-details__content {}
-
-.product-details__body {}
