--- a/src/scss/config/common.scss
+++ b/src/scss/config/common.scss
@@ -189,3 +189,44 @@ p {
         grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     }
 }
+
+.tab-title {
+    position: relative;
+    font-size: 18px;
+    font-weight: 500;
+    background: transparent;
+
+    &:not(:last-child) {
+        margin-right: 10px;
+    }
+
+    &._tab-active::after {
+        content: '';
+        display: block;
+        position: absolute;
+        bottom: -2px;
+        left: 0;
+        background: $accentColor;
+        width: 100%;
+        height: 1.5px;
+    }
+
+    @media (min-width: $laptop) {
+        font-size: 22px;
+
+        &:not(:last-child) {
+            margin-right: 15px;
+        }
+
+        &._tab-active::after {
+            content: '';
+            display: block;
+            position: absolute;
+            bottom: -2px;
+            left: 0;
+            background: $accentColor;
+            width: 100%;
+            height: 2px;
+        }
+    }
+}
