refactored gallery contacts section according to bem

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -52,7 +52,7 @@
 @import 'components/sections/new';
 @import 'components/callback';
 @import 'components/sections/catalog';
-// @import 'components/contacts';
+@import 'components/sections/contacts';
 @import 'components/sections/product';
 @import 'components/gallery-popup';
 @import 'components/reviews';
