--- a/src/scss/components/blocks/list.scss
+++ b/src/scss/components/blocks/list.scss
@@ -1,9 +1,12 @@
 .list {
+  padding-left: 25px;
+
   &_style_none {
     list-style: none;
+    padding-left: 10px;
   }
 
   &__item {
-    padding: 4px 0px 4px 10px;
+    padding: 4px 0px 4px 0;
   }
 }
