--- a/src/scss/components/sections/contacts.scss
+++ b/src/scss/components/sections/contacts.scss
@@ -20,43 +20,23 @@
     }
 }
 
-.phones {
+.contacts__phones {
     margin-bottom: 16px;
 }
 
-.phones__title {
+.contacts__phones-title {
     margin-bottom: 10px;
 }
 
-.phones__list {
-    margin-left: 30px;
-}
-
-.phones__item {
+.contacts__phones-item {
     font-size: 20px;
-
-    a {
-        transition: color 0.2s;
-    }
-
-
-    &:not(:last-child) {
-        margin-bottom: 7px;
-    }
-
-    @media (any-hover: hover) {
-        & a:hover {
-            color: $accentColor;
-            transition: color 0.2s;
-        }
-    }
 }
 
 .form__title {
     margin-bottom: 10px;
 }
 
-.map {
+.contacts__map {
     @media (min-width: $tablet) {
         flex: 50%;
     }
